// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CSS Variables Adapter Golden Tests > generates CSS variables matching golden snapshot > css-variables 1`] = `
"/* Design System CSS Variables */
/* Generated by Ghatana DS Generator */

:root {
  /* Colors */
  --color-primary: #0066CC;
  --color-secondary: #6B7280;
  --color-accent: #FF6B6B;
  --color-neutral: #F3F4F6;

  /* Typography */
  --font-family-base: Inter, sans-serif;
  --font-size-xs: 12px;
  --font-size-sm: 14px;
  --font-size-md: 16px;
  --font-size-lg: 18px;
  --font-size-xl: 24px;

  /* Border Radius */
  --radius-sm: 4px;
  --radius-md: 8px;
  --radius-lg: 12px;
  --radius-full: 9999px;

  /* Spacing */
  --spacing-xs: 4px;
  --spacing-sm: 8px;
  --spacing-md: 16px;
  --spacing-lg: 24px;
  --spacing-xl: 32px;

  /* Elevation */
  --elevation-sm: 0 1px 2px rgba(0,0,0,0.05);
  --elevation-md: 0 4px 6px rgba(0,0,0,0.1);
  --elevation-lg: 0 10px 15px rgba(0,0,0,0.15);
}"
`;

exports[`JSON Tokens Adapter Golden Tests > generates JSON tokens matching golden snapshot > json-tokens 1`] = `
"{
  "formatVersion": "1.0.0",
  "tokens": {
    "colors": {
      "primary": "#0066CC",
      "secondary": "#6B7280",
      "accent": "#FF6B6B",
      "neutral": "#F3F4F6"
    },
    "typography": {
      "fontFamily": "Inter, sans-serif",
      "fontSizes": {
        "xs": 12,
        "sm": 14,
        "md": 16,
        "lg": 18,
        "xl": 24
      }
    },
    "borderRadius": {
      "sm": "4px",
      "md": "8px",
      "lg": "12px",
      "full": "9999px"
    },
    "spacing": {
      "xs": 4,
      "sm": 8,
      "md": 16,
      "lg": 24,
      "xl": 32
    },
    "elevation": {
      "sm": "0 1px 2px rgba(0,0,0,0.05)",
      "md": "0 4px 6px rgba(0,0,0,0.1)",
      "lg": "0 10px 15px rgba(0,0,0,0.15)"
    }
  },
  "metadata": {
    "generatedAt": "2024-01-01T00:00:00.000Z",
    "generator": "ghatana-ds-generator"
  }
}"
`;

exports[`React Theme Adapter Golden Tests > generates React theme matching golden snapshot > react-theme 1`] = `
"import type { Theme } from '@ghatana/theme';

export const defaultTheme: Theme = {
  colors: {
    'primary': '#0066CC',
    'secondary': '#6B7280',
    'accent': '#FF6B6B',
    'neutral': '#F3F4F6',
  },

  typography: {
    fontFamily: 'Inter, sans-serif',
    fontSizes: {
      'xs': 12,
      'sm': 14,
      'md': 16,
      'lg': 18,
      'xl': 24,
    },
  },

  borderRadius: {
    'sm': '4px',
    'md': '8px',
    'lg': '12px',
    'full': '9999px',
  },

  spacing: {
    'xs': 4,
    'sm': 8,
    'md': 16,
    'lg': 24,
    'xl': 32,
  },

  shadows: {
    'sm': '0 1px 2px rgba(0,0,0,0.05)',
    'md': '0 4px 6px rgba(0,0,0,0.1)',
    'lg': '0 10px 15px rgba(0,0,0,0.15)',
  },
};"
`;

exports[`Tailwind Config Adapter Golden Tests > generates Tailwind config matching golden snapshot > tailwind-config 1`] = `
"/** @type {import("tailwindcss").Config} */
export default {
  theme: {
    extend: {
      colors: {
        'primary': '#0066CC',
        'secondary': '#6B7280',
        'accent': '#FF6B6B',
        'neutral': '#F3F4F6',
      },
      fontFamily: {
        sans: ['Inter, sans-serif', 'sans-serif'],
      },
      fontSize: {
        'xs': '12px',
        'sm': '14px',
        'md': '16px',
        'lg': '18px',
        'xl': '24px',
      },
      borderRadius: {
        'sm': '4px',
        'md': '8px',
        'lg': '12px',
        'full': '9999px',
      },
      spacing: {
        'xs': '4px',
        'sm': '8px',
        'md': '16px',
        'lg': '24px',
        'xl': '32px',
      },
      boxShadow: {
        'sm': '0 1px 2px rgba(0,0,0,0.05)',
        'md': '0 4px 6px rgba(0,0,0,0.1)',
        'lg': '0 10px 15px rgba(0,0,0,0.15)',
      },
    },
  },
};"
`;
